--- a/scss/components/_layouts.scss
+++ b/scss/components/_layouts.scss
@@ -576,7 +576,7 @@ main{
 
 .contactos-pag{
     margin-top: 50px;
-    margin-bottom: 170px;
+    margin-bottom: 150px;
     font-family: 'Lato', sans-serif;
     display: flex;
     .contactos-formulario{
@@ -585,7 +585,6 @@ main{
         div{
             @extend %flex;
             padding: 5px;
-            margin-left: -150px;
             b{
                 width: 170px;
                 margin-left: 30px;
@@ -595,10 +594,11 @@ main{
                 width: 50%;
                 height: 30px;
                 margin-left: 30px;
+                border: 1px solid $color-cuaternario;
             }
             .enviar-contacto{
                 width: 150px;
-                margin-left: 200px;
+                margin-left: 225px;
                 background-color: map-get($boton, bg-boton);
                 border: map-get($boton, border-boton);
                 color: map-get($boton, color-text);
@@ -607,6 +607,7 @@ main{
             textarea{
                 width: 50%;
                 margin-left: 30px;
+                border: 1px solid $color-cuaternario;   
             }
             .enviar-contacto:hover{
                 color: white;
@@ -629,7 +630,7 @@ main{
         div{
             p{
                 font-size: 15px;
-                color: #999999;
+                color: $color-cuaternario;
             }
         }
         div{
